# autoxconf

./: .bazelrc  README.adoc  WORKSPACE.bazel
configure/: BUILD.bazel  BUILD_PROVIDERS.bzl  BUILD_RULES.bzl  cc_xconfigure.bzl  main.c  spawner.c  spawner.h
configure/rules/: cc_xconfigure.bzl  config_cc_toolchain.bzl  config_headers.bzl
configure/src/: BUILD.bazel  auto_conf_ini.c  compile.c  feature_tester.c  main.c  null.c  preprocess.c  spawner.c
test/: BUILD.bazel  test.c
test/headers/: BUILD.bazel
test/preprocess/: BUILD.bazel
