workspace(name = "auto_conf")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

#############
http_archive(
    name = "bazel_skylib",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.0.2/bazel-skylib-1.0.2.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.0.2/bazel-skylib-1.0.2.tar.gz",
    ],
    sha256 = "97e70364e9249702246c0e9444bccdc4b847bed1eb03c5a3ece4f83dfe6abc44",
)
load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()

################################################################
## zig
## https://sr.ht/~motiejus/bazel-zig-cc/

BAZEL_ZIG_CC_VERSION = "v0.9.2"
SHA256 = "73afa7e1af49e3dbfa1bae9362438cdc51cb177c359a6041a7a403011179d0b5"

# not yet:
# BAZEL_ZIG_CC_VERSION = "v1.0.0-rc1"
# SHA256 = "07c8cc88faed737f5e7fc74b2bce94382486c40245b1ce718c6cd3774ba6be5f"

http_archive(
    name = "bazel-zig-cc",
    sha256 = SHA256,
    strip_prefix = "bazel-zig-cc-{}".format(BAZEL_ZIG_CC_VERSION),
    urls = ["https://git.sr.ht/~motiejus/bazel-zig-cc/archive/{}.tar.gz".format(BAZEL_ZIG_CC_VERSION)],
)

load("@bazel-zig-cc//toolchain:defs.bzl", zig_toolchains = "toolchains")

# version, url_formats and host_platform_sha256 are optional, but highly
# recommended. Zig SDK is by default downloaded from dl.jakstys.lt, which is a
# tiny server in the closet of Yours Truly.
zig_toolchains(
    # version = "<...>",
    # url_formats = [
    #     "https://example.org/zig/zig-{host_platform}-{version}.{_ext}",
    # ],
    # host_platform_sha256 = { ... },
)

register_toolchains(
    ## enable these to always use zig, and to cross-compile
    # if no `--platform` is specified, these toolchains will be used for
    # (linux,darwin)x(amd64,arm64)
    # "@zig_sdk//toolchain:linux_amd64_gnu.2.25",
    # "@zig_sdk//toolchain:linux_arm64_gnu.2.28",
    # "@zig_sdk//toolchain:darwin_amd64",
    # "@zig_sdk//toolchain:darwin_arm64",

    # # amd64 toolchains for libc-aware platforms:
    # "@zig_sdk//libc_aware/toolchain:linux_amd64_gnu.2.19",
    # "@zig_sdk//libc_aware/toolchain:linux_amd64_gnu.2.28",
    # "@zig_sdk//libc_aware/toolchain:linux_amd64_gnu.2.31",
    # "@zig_sdk//libc_aware/toolchain:linux_amd64_musl",

    # # arm64 toolchains for libc-aware platforms:
    # "@zig_sdk//libc_aware/toolchain:linux_arm64_gnu.2.28",
    # "@zig_sdk//libc_aware/toolchain:linux_arm64_musl",
)

#### end zig ####
