load("//configure:BUILD_RULES.bzl",
     "cc_xconfigure",
     "config_headers"
     )

##############
config_headers(
    name = "sys_mman",
    headers = {
        # "hdr.h" : [depends on ...]
        "sys/mman.h" : ["a.h", "b.h"],
        "foo.h": []
    }
)

# config_function(
#     name = "fn_mmap",
#     headers = [":hdr_sys_mman_h"],
#     function = "mmap" ## AC_CHECK_FUNC
# )
# config_function(
#     name = "fn_munmap",
#     function = "munmap" ## AC_CHECK_FUNC
#     # headers = [":hdr_sys_mman_h"],
#     deps    = [":fn_mmap"]
# )

# config_define(
#     name = "has_mmap",
#     deps = [
#         ":hdr_sys_mman_h",
#         ":fn_mmap",
#         ":fn_munmap"
#     ]
# )


#   [AC_CHECK_HEADER([locale.h],
#     [AC_CHECK_FUNC([newlocale],
#       [AC_CHECK_FUNC([freelocale],
#         [AC_CHECK_FUNC([uselocale], [AC_DEFINE([HAS_LOCALE_H])])])])])])

# def_config_item(
#     name = "local",
#     define = "HAS_LOCAL_H",
#     header = "locale.h",     ## AC_CHECK_HEADER
#     functions = ["newlocale", "freelocal", "uselocale"] ## AC_CHECK_FUNC
# )
